Added more AuthController.php and BookController.php endpoints
